--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en,es">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/logoocta.jpg"
+      type="image/x-jpg"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -12,7 +17,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Document</title>
+    <title>Promob Fusteria</title>
   </head>
   <body>
     <div id="root"></div>
